--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "create-users": "npx ts-node -P src/scripts/tsconfig.json src/scripts/create-test-users.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run pages:build && wrangler pages deploy"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -39,7 +42,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.479.0",
-    "next": "15.2.2",
+    "next": "^15.3.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
@@ -56,6 +59,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.12",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -72,6 +76,7 @@
     "tailwindcss": "^4",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "4.7.0"
   }
 }
